--- a/index.html
+++ b/index.html
@@ -37,7 +37,24 @@
     <header class="container-fluid">
       <h1>Slap Game</h1>
     </header>
-    <main class="container d-flex justify-content-center">
+    <main
+      id="arena"
+      class="
+        container-fluid
+        background-change
+        newbg
+        d-flex
+        flex-column
+        justify-content-center
+      "
+    >
+      <div class="row">
+        <div class="col-12">
+          <button class="btn arena-change" onclick="newArena()">
+            Change Arena
+          </button>
+        </div>
+      </div>
       <div class="row justify-content-center">
         <div class="col-6 justify-content-center">
           <h1 id="health-display" class="healthDisplay">
