--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Thulu-Slap-Game</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -39,20 +39,14 @@
     </header>
     <main
       id="arena"
-      class="
-        container-fluid
-        background-change
-        newbg
-        d-flex
-        flex-column
-        justify-content-center
-      "
+      class="container-fluid mountain d-flex flex-column justify-content-center"
     >
       <div class="row">
         <div class="col-12">
-          <button class="btn arena-change" onclick="newArena()">
-            Change Arena
+          <button class="btn arena-change" onclick="oceanArena()">
+            Ocean Arena
           </button>
+          <button class="btn" onclick="spaceArena()">Space Arena</button>
         </div>
       </div>
       <div class="row justify-content-center">
