--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             Ocean Arena
           </button>
           <button class="btn" onclick="spaceArena()">Space Arena</button>
+          <button class="btn" onclick="mountainArena()">Mountain Arena</button>
         </div>
       </div>
       <div class="row justify-content-center">
